# parity-daemonize

./: Cargo.toml  README.md
examples/: simple.rs
src/: error.rs  lib.rs
src/platform/: unix_pipe.rs
