[package]
name = "tetsy-daemonize"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/tetcoin/tetsy-daemonize"
documentation = "https://docs.rs/tetsy-daemonize"
readme = "README.md"
description = "A more advanced daemonizer"
keywords = ["daemon", "daemonize", "unix", "tetcoin"]
categories = ["os::unix-apis"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
libc = "0.2"
failure = "0.1"
log = "0.4"
mio = "0.6"
ansi_term = "0.11"
